# llmcord

./: .gitignore  Dockerfile  LICENSE.md  README.md  llmcord.py  pyproject.toml
prompts/: README.md
slopcord/: __main__.py  agent.py  commands.py  configs.py  constants.py  events.py  formatters.py  globals.py  llm.py  messages.py  permissions.py  tools.py  vfs.py
