[project]
name = "slopcord"
version = "0.1.0"
description = "slopcord: a smooth sloperator for interfacing LLMs with Discord"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "discord-py>=2.6.0",
    "fs>=2.4.16",
    "httpx>=0.28.1",
    "openai>=2.36.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "setuptools<82",
]

[tool.uv]
package = false
